--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -7,3 +7,18 @@
 .text-color{
     color:#BC1F29;
 }
+.btn-color{
+    background-color: #31B3D9;
+}
+.googleLogin{
+    background-color:#FFFFFF ;
+    border-radius: 10px;
+    color: black;
+}
+.button{
+    background-color:#BC1F29;
+    padding: 10px 15px;
+    color: white;
+    border-radius: 8px;
+    
+}
