--- a/src/Pages/Registration/Registration.css
+++ b/src/Pages/Registration/Registration.css
@@ -1,9 +1,9 @@
 .btn-bg-color{
-    background-color:#BC1F29;
+    background-color:#59C6BC;
 }
 .btn-bg-color:hover{
     color: black;
 }
 .text-color{
-    color:#BC1F29;
+    color:#59C6BC;
 }
