--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,200;0,500;0,900;1,200;1,400;1,500&family=Merriweather:wght@900&family=Noto+Serif:wght@500&display=swap');
+
+.drawer-side a.active{
+    color: #59C6BC;
+}
